--- a/My Portfolio Website/index.html
+++ b/My Portfolio Website/index.html
@@ -168,7 +168,7 @@
                     <a href="https://www.instagram.com/anurag_salpe?igsh=Nng1NzVpcWJ2czJ0"><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="http://www.linkedin.com/in/anurag-salpe-0a23572a4"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/AnuragSalpe"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/AnuragRajuSalpe"><i class="fa-brands fa-github"></i></a>
             </div><a href="Images/anurag_salpe_cv(1)(8).pdf" download class="btn btn2">Download CV</a> </div>
             <div class="contact-right" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
                 <form method="post" action="https://script.google.com/macros/s/AKfycbye_Yno3Huoh-30g0qs_16wEnUATfFyzrRQjzt6MMdb-HW76F4i6EcJy2-eDoJHPlad/exec" name="contact-form">
